--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,7 +4,7 @@ hugoblox:
     name: Timothy En Haw Chan
     type: person
     tagline: Biomedical Scientist / Biotech Editor
-    description: Timothy En Haw Chan is a scientist working on understanding epigenetics in cancer and cell signalling
+    description: Timothy En Haw Chan is a scientist working on understanding epigenetics in cancer and cell signaling.
   theme:
     mode: system
     pack: contrast
