--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -45,71 +45,98 @@ interests:
   - "Signaling Transduction"
   - "Synthetic Biology"
 education:
-  - degree: "PhD Computer Science"
-    institution: "Stanford University"
-    start: "2015-09-01"
-    end: "2019-06-30"
-    summary: "Thesis on scaling laws for neural language models. Published 5 papers in NeurIPS and ICML.\n"
-    button:
-      text: "Download dissertation"
-      url: "/resume.pdf"
-      icon: "hero/arrow-down-tray"
-  - degree: "MS Computer Science"
-    institution: "Carnegie Mellon University"
-    start: "2013-09-01"
-    end: "2015-05-31"
   - degree: "BSc Biomedical Sciences"
     institution: "Chang Gung University"
     start: "2012-09-01"
     end: "2016-06-28"
-    summary: " 
-      <br>· Bachelor of Science (BS), College of Medicine, Department of Biomedical Sciences. </br>
-      <br>· Worked on gene expression profiling and R in genomics core lab, Molecular Medicine Research Center, supervised by Hua-Chien Chen PhD.</br>
-      <br>· First Place Winner, Annual Research Poster Contest and Undergraduate Academic Excellence Award (Ranked top 5% in class 6 out of 8 semesters).</br>"
-experience:
-  - role: "Senior AI Research Scientist"
-    org: "Meta AI"
-    start: "2020-01-01"
-    summary: "Leading research on multimodal AI systems. Contributed to Llama 2 and other open-source models.\n"
+    summary: " <br>· Bachelor of Science (BS), College of Medicine, Department of Biomedical Sciences. </br> <br>· Worked on gene expression profiling and R in genomics core lab, Molecular Medicine Research Center, supervised by Hua-Chien Chen PhD.</br> <br>· First Place Winner, Annual Research Poster Contest and Undergraduate Academic Excellence Award (Ranked top 5% in class 6 out of 8 semesters).</br>"
+  - degree: "MS Biomedical Sciences"
+    institution: "Chang Gung University"
+    start: "2016-09-01"
+    end: "2018-08-01"
+    summary: "· Master of Science (MS), Graduate Institute of Biomedical Sciences, Division of Microbiology <br>
+
+      · Worked in oral cancer and nasopharyngeal cancer research in Yu-Sun Chang lab. <br>
+
+      · Discovered miRNA regulation of DNA editing enzyme APOBEC3A in APOBEC3B-deletion germline polymorphism."
+  - degree: "PhD Biology"
+    institution: "Max Planck IMPRS-IEM PhD Program & University of Freiburg"
+    start: "2018-09-01"
+    end: "2025-12-01"
+    summary: "Thesis on contribution of mixed lineage leukemias (MLLs) histone methyltransferase complex in TGF-beta signaling. Supervised by Prof Dr Marc Timmers."
     button:
-      text: "View portfolio"
-      url: "/"
-      icon: "hero/arrow-down-tray"
-  - role: "AI Research Intern"
-    org: "OpenAI"
-    start: "2019-06-01"
-    end: "2019-12-31"
-    summary: "Worked on GPT-3 scaling. Co-authored paper on prompt engineering.\n"
+      text: "Read Info"
+      url: "https://www.ie-freiburg.mpg.de/person/95279/2342"
+      icon: ""
+experience:
+  - role: "IMPRS PhD Researcher"
+    org: "German Cancer Consortium DKTK, German Cancer Research Center DKFZ, Germany"
+    start: "2019-01"
+    end: "2025-12"
+    summary: "· Working on functional analysis of epigenetic factor in control of cancer cell signaling by multi-omics integration. <br>
+
+      · Experienced with CRISPR editing, epigenetics, transcriptional experiments and data analysis, including RNA-Seq, CUT&RUN, CUT&Tag, ChIP-seq, ATAC-seq, Hi-C. <br>
+
+      · Implementing and optimizing CRISPR editing and RNA-seq data analysis workflow for the lab."
+  - role: "Contributing Editor and Science writer"
+    org: "The Investigator Taiwan, Taiwan"
+    start: "2015-09"
+    end: "2023-02"
+    summary: "· Contributing Editor and writer about recent biomedical research. Portfolio: investigator.tw/author/id003/ <br>
+
+      · As former editor-in-chief (Year 2017), leading the editorial team, performed strategic planning and project management on editorial workflow."
+  - role: "Co-founder"
+    org: "Chang Gung University International Genetically Machine iGEM Team, CGU_Taiwan"
+    start: "2014-12"
+    end: "2016-12"
+    summary: "· Co-founder who organized the first iGEM team in Chang Gung University. Built an interdisciplinary team to take part the worldwide synthetic biology competition. <br>
+
+      · Wrote proposal, secured team grant funding, did team recruitment and experiments design for the team. The results of RNA toehold switch and engineered G protein-coupled receptor on yeast as biosensor were presented at 2015 iGEM Giant Jamboree in Boston. <br>
+
+      · As team advisor in year 2016"
 skills:
-  - name: "Technical Skills"
-    items:
-      - label: "Python"
-        level: 5
-      - label: "Machine Learning"
-        level: 5
-      - label: "Cloud Computing"
-        level: 4
-  - name: "Research & Communication"
-    items:
-      - label: "Academic Writing"
-        level: 5
-      - label: "Conference Presentations"
-        level: 4
-      - label: "Grant Proposals"
-        level: 4
+  - name: "Molecular Biology"
+    items: []
+  - name: "Bioinformatics"
+    items: []
 languages:
   - name: "English"
-    level: 5
-    label: "Native"
-  - name: "Spanish"
     level: 4
     label: "Fluent"
+  - name: "Chinese"
+    level: 5
+    label: "Native"
+  - name: "Malay"
+    level: 3
+    label: "Intermediate"
+  - name: "German"
+    level: 1
+    label: "Basic"
+  - name: "Indonesian"
+    level: 1
+    label: "Basic"
 awards:
-  - title: "Best Paper Award"
-    awarder: "NeurIPS"
-    date: "2022-12-01"
-    summary: "Awarded for groundbreaking work on efficient training of large models."
-    icon: "hero/trophy"
+  - title: "FASEB TGF-ß Superfamily Conference Travel Award"
+    awarder: "FASEB TGF-ß Superfamily Conference "
+    date: "2022-07"
+    summary: ""
+    icon: ""
+  - title: "Taiwan Overseas Community Affair Council Graduate Scholarship Award"
+    awarder: "Overseas Community Affair Council, Taiwan"
+    date: "2017-01"
+    summary: "Scholarship worth NTD120K (USD4,500) granted for excellent academic performance among top 2% overseas Chinese students in Taiwan."
+  - title: "First Place Winner, Annual Research Poster Contest"
+    awarder: "Dept. of Biomedical Sciences, Chang Gung University"
+    date: "2016-05"
+    summary: "Granted for excellent undergraduate thesis research, poster and oral presentation: “Integrative profiling and analysis of Epstein-Barr virus-encoded microRNAs” in the academic year 2016."
+  - title: "Chang Gung Youth Award"
+    awarder: "College of Medicine, Chang Gung University"
+    date: "2016-04"
+    summary: "Granted by College of Medicine, Chang Gung University as one of the most outstanding students in the college in 2015/2016 academic year."
+  - title: "Gold Award in Popular Science Writing"
+    awarder: "Taiwan Genomics Medicine and Biomarker Society"
+    date: "2014-11"
+    summary: "Granted for pop-science essay writing about genomics medicine."
 weight: null
 ids:
   orcid: "0000-0002-2456-9336"
