--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -97,9 +97,21 @@ experience:
       <br>· As team advisor in year 2016.</br>"
 skills:
   - name: "Molecular Biology"
-    items: 
+    items:
+      - label: Python
+        level: 5
+      - label: Machine Learning
+        level: 5
+      - label: Cloud Computing
+        level: 4
   - name: "Bioinformatics"
     items: 
+      - label: Academic Writing
+        level: 5
+      - label: Conference Presentations
+        level: 4
+      - label: Grant Proposals
+        level: 4
 languages:
   - name: "English"
     level: 4
