--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -46,7 +46,7 @@ interests:
   - "Synthetic Biology"
 education:
   - degree: "PhD Biology"
-    institution: "Max Planck IMPRS-IEM PhD Program & University of Freiburg"
+    institution: "Max Planck IMPRS-IEM PhD Program & University of Freiburg, Germany"
     start: "2018-09-01"
     end: "2025-12-01"
     summary: "Thesis on contribution of mixed lineage leukemias (MLLs) histone methyltransferase complex in TGF-beta signaling. Supervised by Prof Dr Marc Timmers."
@@ -55,7 +55,7 @@ education:
       url: "https://www.ie-freiburg.mpg.de/person/95279/2342"
       icon: ""
   - degree: "MS Biomedical Sciences"
-    institution: "Chang Gung University"
+    institution: "Chang Gung University, Taiwan"
     start: "2016-09-01"
     end: "2018-08-01"
     summary: "
@@ -63,7 +63,7 @@ education:
     <br>· Worked in oral cancer and nasopharyngeal cancer research in Yu-Sun Chang lab. </br>
     <br>· Discovered miRNA regulation of DNA editing enzyme APOBEC3A in APOBEC3B-deletion germline polymorphism.</br>"
   - degree: "BSc Biomedical Sciences"
-    institution: "Chang Gung University"
+    institution: "Chang Gung University, Taiwan"
     start: "2012-09-01"
     end: "2016-06-28"
     summary: " 
